Add some bounds (needs cleaning)

--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -170,6 +170,8 @@ ACM SIG Proceedings\footnote{This is an abstract footnote}.
 
 \input{sections/framework}
 
+\input{sections/bounds}
+
 \input{sections/implementation}
 
 \input{sections/experiments}
