Cynthia -- new title

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -36,8 +36,8 @@
 
 \begin{frontmatter}
 
-\title{Learning rule lists with branch-and-bound}
-\runtitle{Learning rule lists with branch-and-bound}
+\title{Learning certifiably optimal rule lists for categorical data}
+\runtitle{Learning certifiably optimal rule lists for categorical data}
 
 
 \begin{abstract}
