--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -51,7 +51,7 @@
 \hyphenation{speed-up}
 
 \begin{document}
-\title{Learning rule lists with branch and bound}
+\title{Learning certifiably optimal rule lists for categorical data}
 \titlenote{Produces the permission block, and
   copyright information}
 \subtitle{Extended Abstract}
