--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -34,15 +34,15 @@ Optimality is important because there are societal implications for a lack of op
 
 In our framework, we consider the class of rule lists created from pre-mined frequent itemsets. The rule list must be assembled from these itemsets to minimize a regularized risk functional, $R$. This is a hard discrete optimization problem. A brute force solution to find the rule list that minimizes $R$ would be computationally prohibitive due to the exponential number of possible rule lists. This, however, is a worst case bound that is not realized in practical settings. For realistic cases, it is possible to solve fairly large cases of this problem to optimality, with the careful use of algorithms, data structures, and bit-vector manipulation.
 
-We develop specialized tools from the field of discrete optimization and artificial intelligence, and in particular, a special branch-and-cut algorithm, called "??", that provides (1) the optimal solution, (2) near-optimal solutions, (3) a certificate of optimality, and if optimality is not achieved, the distance between the current solution and optimality. Because of the certificate of optimality, this method can also be used to investigate how close other models (e.g., models provided by greedy algorithms) are to optimality. In particular, we can investigate if the rule lists from probabilistic approaches are nearly optimal or whether those approaches sacrifice too much accuracy to gain speed for constructing the model.
+We develop specialized tools from the field of discrete optimization and artificial intelligence, and in particular, a special branch-and-cut algorithm, called  Certifiably Optimal RulE ListS (CORELS), that provides (1) the optimal solution, (2) near-optimal solutions, (3) a certificate of optimality, and if optimality is not achieved, the distance between the current solution and optimality. Because of the certificate of optimality, this method can also be used to investigate how close other models (e.g., models provided by greedy algorithms) are to optimality. In particular, we can investigate if the rule lists from probabilistic approaches are nearly optimal or whether those approaches sacrifice too much accuracy to gain speed for constructing the model.
 
-Within its branch-and-cut procedure, ??? maintains an upper bound on the maximum value of $R$ that each incomplete rule list can achieve. This allows it to prune an incomplete rule list (and every possible extension) if the bound is worse than the accuracy of the best rule list that we've already looked at. The use of careful bounding techniques leads to massive pruning of the search space of potential rule lists. We continue to consider incomplete and complete rule lists until we have either looked at every rule list or eliminated it from consideration. Thus, the end of execution leaves us with the optimal rule list, the close-to-optimal rule lists, and a certificate of optimality.
+Within its branch-and-cut procedure, CORELS maintains an upper bound on the maximum value of $R$ that each incomplete rule list can achieve. This allows it to prune an incomplete rule list (and every possible extension) if the bound is worse than the accuracy of the best rule list that we've already looked at. The use of careful bounding techniques leads to massive pruning of the search space of potential rule lists. We continue to consider incomplete and complete rule lists until we have either looked at every rule list or eliminated it from consideration. Thus, the end of execution leaves us with the optimal rule list, the close-to-optimal rule lists, and a certificate of optimality.
 
-The efficacy of ??? depends on how much of the search space our bounds allow us to prune. The upper bound on $R$ must thus be as tight as reasonably possible. The bound we maintain throughout the calculation is a minimum of several bounds, that come in three categories. The first category of bounds are those intrinsic to the rules themselves. This category includes bounds stating that each rule must capture sufficient data; if not, the rule list is provably non-optimal. The second type of bound compares an upper bound on the value of $R$ to that of the current best solution. This allows us to exclude parts of the search space that could never be better than our current solution. Finally, our last type of bound is based on comparing incomplete rule lists that capture the same data and pursuing only the more accurate option. This last class of bounds is especially important -- without our use of a novel \textit{symmetry-aware map}, we are unable to solve most problems of reasonable scale. This symmetry-aware map keeps track of the best accuracy for all the permutations of a given incomplete rule list.
+The efficacy of CORELS depends on how much of the search space our bounds allow us to prune. The upper bound on $R$ must thus be as tight as reasonably possible. The bound we maintain throughout the calculation is a minimum of several bounds, that come in three categories. The first category of bounds are those intrinsic to the rules themselves. This category includes bounds stating that each rule must capture sufficient data; if not, the rule list is provably non-optimal. The second type of bound compares an upper bound on the value of $R$ to that of the current best solution. This allows us to exclude parts of the search space that could never be better than our current solution. Finally, our last type of bound is based on comparing incomplete rule lists that capture the same data and pursuing only the more accurate option. This last class of bounds is especially important -- without our use of a novel \textit{symmetry-aware map}, we are unable to solve most problems of reasonable scale. This symmetry-aware map keeps track of the best accuracy for all the permutations of a given incomplete rule list.
 
-In order to keep track of all of these bounds for each rule list, we implemented a modified trie that we call a prefix tree. Each node in the prefix tree represents an individual rule; thus, each path in the tree represents a rule list where the final node in the path contains the metrics about that rule list. This tree structure facilities the use of multiple different selection algorithms including breadth-first search, a priority queue based on a custom curiosity function, and a stochastic selection process. In addition, we are able to limit the number of nodes in the tree and thereby achieve a way of tuning space-time tradeoffs in a robust manner. We propose that this tree structure is a useful way of organizing the generation of rule lists and could allow future implementations of ??? to be easily parallelized.
+In order to keep track of all of these bounds for each rule list, we implemented a modified trie that we call a prefix tree. Each node in the prefix tree represents an individual rule; thus, each path in the tree represents a rule list where the final node in the path contains the metrics about that rule list. This tree structure facilities the use of multiple different selection algorithms including breadth-first search, a priority queue based on a custom curiosity function, and a stochastic selection process. In addition, we are able to limit the number of nodes in the tree and thereby achieve a way of tuning space-time tradeoffs in a robust manner. We propose that this tree structure is a useful way of organizing the generation of rule lists and could allow future implementations of CORELS to be easily parallelized.
 
-We evaluated BBRL??? on a number of publicly available datasets, and have made code for our algorithm and experiments publicly available. Our metric of success was 10-fold cross validated prediction accuracy on a subset of the data. These datasets involve hundreds of rules and hundreds or thousands of observations. BBRL??? is generally able to find the optimal rule list in a matter of seconds and certify it within about 10 minutes. We show that we are able to achieve better out-of-sample accuracy on these datasets than the popular greedy algorithms, CART or C5.0.
+We evaluated CORELS on a number of publicly available datasets, and have made code for our algorithm and experiments publicly available. Our metric of success was 10-fold cross validated prediction accuracy on a subset of the data. These datasets involve hundreds of rules and hundreds or thousands of observations. CORELS is generally able to find the optimal rule list in a matter of seconds and certify it within about 10 minutes. We show that we are able to achieve better out-of-sample accuracy on these datasets than the popular greedy algorithms, CART or C5.0.
 
 This algorithm is designed for solving large (not massive) problems, where interpretability and certifiable optimality is important. A key example of the type of problems this algorithm is useful for is recidivism prediction. Thus, we work on the dataset released by Northpointe, who designed the proprietary COMPAS algorithm. We show that, at least on this sample of the data, it is possible to produce an certifiably optimal interpretable rule list that achieves the same accuracy as a random forest applied to this dataset. We thus see no reason why a proprietary algorithm should be used for recidivism prediction.
 
