--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -117,9 +117,7 @@
 
 
 \begin{abstract}
-This paper provides a sample of a \LaTeX\ document which conforms,
-somewhat loosely, to the formatting guidelines for
-ACM SIG Proceedings\footnote{This is an abstract footnote}. 
+\input{sections/abstract}
 \end{abstract}
 
 %
